# cc-bridge

./: .gitignore  CLAUDE.md  README.md  bridge  bridge-server  bridge-session  pyproject.toml
cc_bridge/: __init__.py  bridge_cli.py  session_cli.py
